# seed_parser

./: .gitignore  README.md  gen_wallet.py  install_libs.cmd  main.py  mnemonic.py  pyproject.toml  requirements.txt  run.bat  seed_parser.py  seed_parser_v2.2.py  tmp.db
src/seed_parser/: __init__.py  cli.py  parser.py  wallet.py
