[project]
name = "seed_parser"
version = "1.0.0"
description = "High-performance cryptocurrency seed phrase and private key extractor"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "bip_utils==2.7.0",
    "mnemonic>=0.20",
    "blocksmith>=1.2.0",
    "requests>=2.31.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.9",
    "mypy>=1.7.0",
    "black>=23.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src/seed_parser/**/*.py",
    "src/seed_parser/data/wordlist/*.txt",
]

[tool.hatch.build.targets.wheel]
packages = ["src/seed_parser"]

[project.scripts]
seed-parser = "seed_parser.cli:main"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=seed_parser"
testpaths = [
    "tests",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
